--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "tsc"
     },
-    "keywords": ["memes"],
+    "keywords": [
+        "memes"
+    ],
     "author": "Kapone",
     "license": "ISC",
     "repository": {
@@ -19,7 +21,7 @@
     },
     "homepage": "https://github.com/kapone-dev/memes-js",
     "devDependencies": {
-        "@types/node-fetch": "^2.5.11",
+        "@types/node-fetch": "^2.5.12",
         "node-fetch": "^2.6.1"
     }
 }
