--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "memes-js",
-    "version": "1.0.4",
+    "version": "1.0.6",
     "description": "A package to get a random memes from reddit :)",
-    "main": "./lib/index.js",
+    "main": "./src",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "tsc"
@@ -20,7 +20,9 @@
         "url": "https://github.com/Kapone-dev/memes-js/issues"
     },
     "homepage": "https://github.com/kapone-dev/memes-js",
-    "devDependencies": {},
+    "devDependencies": {
+        "@types/node-fetch": "^2.5.12"
+    },
     "dependencies": {
         "axios": "^0.21.1"
     }
