removed src to dist/

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "memes-js",
-    "version": "1.0.6",
+    "version": "1.0.7",
     "description": "A package to get a random memes from reddit :)",
-    "main": "./src",
+    "main": "./dist/index.js",
     "scripts": {
         "test": "echo \"Error: no test specified\" && exit 1",
         "build": "tsc"
